app/www/theme.css
/*######################################
Screen Settings
########################################*/

/* Hide navigation bar menu items */
#navbarID{
  display:none;
}

/* Adds white space on sides of navbar
body > div {
  max-width: 1200px;
}*/

/* Very top of page spans entire width
#page-top {
  height: auto;
  width: 100vw;
  margin-left: calc(50% - 50vw);
  padding: 0;
  padding-top: 6PX;
  position: relative;
}*/

/* Make body smaller width than header which spans the entire page */
/* Center everything */
#map-body {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}
#state-body {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}
#download-body {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

/*######################################
Font size and style
########################################*/

/* Add fonts */
@font-face {
  font-family: Graphik;
  src: url("fonts/GraphikRegular.otf") format('truetype');
}

/* Make some wordy sections smaller */
.small_text {
  font-size: small;
}

/* Change font family throughout */
*{font-family: "Graphik", sans-serif;}


/*##################################################################################################################
Navigation Bar Color and Font
####################################################################################################################*/

/* Navigation bar color and font style, don't need since the naviagation bar is hidden
.navbar{
  background-color: #004270;
  font-size: 16px;
  font-weight: bold;
}

.navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a{
  background-color: #004270 !important;
  font-size: 16px;
  font-weight: bold;
  color: #FFFFFF !important;
}

.navbar-nav li a:hover, .navbar-nav > .active > a {
  color: #2EEBC4 !important;
  background-color:#004270 !important;
}

.tab-panel{
  background-color: #004270;
  color: #004270
}*/

/* Hide navigation bar */
.navbar{
  display:none !important;
}

/*##################################################################################################################
Header and global drop down options
####################################################################################################################*/

/* Remove rounded edges from drop downs and make blue */
.selectize-input {
  border-radius:0px;
  color: #004270;
}
.selectize-input.dropdown-active {
  border-radius:0px;
  color: #004270;
}
.selectize-dropdown {
  border-radius:0px;
  color: #004270;
}
.selectize-dropdown-content .active {
  border-radius:0px;
  color: #004270;
}

/* Top of page is a small grid of controls and info*/
/* Can change background of header here background-color:#DEF0F6; */
#header {
  /*margin: 1rem auto; making everything shift to the left*/
  /*width: 768px;
  display: -ms-flexbox;
  display: flex; vertically aligns to the left */
  background-color:#DDE3E9 !important;
  height: 100px;
  padding: 0 0px;
  display: absolute; /* without this the blue part of the header disappears */
  left: 50%;
}

/* without this, dropdown menus are cut off while using splitLayout */
.shiny-split-layout > div {overflow: visible;}

/* Makes the label for header inputs sit centered on top */
#header > * > span {
  text-align: center;
}

/* Format state header, same as map explorer header */
#state-header {
  background-color:#DDE3E9 !important;
  height: 100px;
  padding: 0 0px;
  margin-left: auto;
  margin-right: auto;
}

/* Format download header, same as map explorer header */
#download-header {
  background-color:#DDE3E9 !important;
  height: 100px;
  padding: 0 0px;
  margin-left: auto;
  margin-right: auto;
}

/*##################################################################################################################
MAP EXPLORER
Dropdowns and buttons
####################################################################################################################*/

/* Format for selector input data-map */
#data-map-btn {
  margin: 17px 10px 17px 10px;
  width: 175px;
  color: #004270;
}

/* Format for selector input adm-pop-map */
#adm-pop-map-btn {
  margin: 17px 10px 17px 10px;
  width: 175px;
  color: #004270;
}

/* Format for selector input year-map*/
#year-map-btn {
  margin: 17px 10px 17px 10px;
  width: 175px;
  color: #004270;
}

/* Size of download buttons */
.download_this{
  text-align: left;
  margin:41px 10px 41px 10px;
  width:175px;
  border-radius:0px;
}

/* Buttons are set at a fixed width and if content is too big it gets elipsed*/
button {
width: 50px;
}

button > div {
-o-text-overflow: ellipsis;
text-overflow: ellipsis;
overflow: hidden;
white-space: nowrap;
}

/*######################################
MAP EXPLORER
Hex map
########################################*/

/* Map select input margins and font style */
/* Text inputs bottom margin prevents it from lining up nicely, so remove */
.form-group.shiny-input-container,
.selectize-control {
  margin-bottom: 0;
}

/* Title of map settings */
#selected-map {
  text-align: center; /* not working */
  font-weight: bold;
  font-size: 24px;
}

/* Map settings */
#hex-map{
  text-align: center; /* not working */
  font-weight: bold;
  font-size:24px;
}

/*######################################
MAP EXPLORER
Table
########################################*/

/* Title of table under map settings */
#selected-map-table{
  text-align: center;
  font-weight: bold;
  font-size:24px;
}

/* Table under map settings */
#table-map {
  text-align: center; /* not working */
  white-space: nowrap;
}

/* Align text with search bar */
#selected-map-table {
  position: relative; top: 55px;
}

/* Change search bar appearance */
#table-map input {
  border-radius: 0px;
  border: 3px color: #004270;
  width: 275px;
  height: 32px;
  background: #FFFFFF;
}

/*
.dataTables_filter {
position: relative;
}
.dataTables_filter .fa-search {
position: absolute;
top: 10px;
left: auto;
right: 10px;
}*/

/*##################################################################################################################
STATE REPORTS
Dropdowns
####################################################################################################################*/

/* State selection button */
#state-btn {
  margin: 17px 10px 17px 10px;
  width: 175px;
  color: #004270;
}

/* Adm or pop selection button */
#adm-pop-btn {
  margin: 17px 10px 17px 10px;
  width: 175px;
  color: #004270;
}

/*######################################
STATE REPORTS
Title and value boxes
########################################*/

/* Title of state settings */
#selected-state {
  text-align: center;
  font-weight: bold;
  font-size: 24px;
}

/*######################################
STATE REPORTS
Tabset Panels
########################################*/

/* Tab formatting - figure out how to change width */
.nav {
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
  margin: 0;
  width: 100%
  display: inline;
}

.nav-tabs > li {
  float:none;
  display:inline-block; /* maintains tab structure for parole, prob and revocations */
  zoom:1;
}

.nav-tabs {
  text-align:center;
  border-bottom: #cccccc !important;
  border-bottom-style: solid !important;
  border-bottom-width: 1px !important;
  font-size: 14px;
}

.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
  color: #FFFFFF;
  cursor: default;
  background-color: #004270;
  border-bottom-color: #cccccc;
}

.nav-tabs>li>a {
  margin-right: 2px;
  line-height: 1.42857143;
  border-radius: 0px 0px 0 0;
  background-color: #F4F6F8;
  color: #004270;
}

/* Affects top nav bar
.nav>li>a:focus, .nav>li>a:hover {
text-decoration: none;
background-color: transparent;
border: 2px solid #cccccc;
}*/

/* State note title setting */
#selected-state-note-title {
  text-align: left;
  font-weight: bold;
  font-size: 24px;
}

/* State note setting */
#consistent-state-note {
  text-align: left;
  font-style: italic;
}

/*##################################################################################################################
DOWNLOAD DATA
Dropdowns
####################################################################################################################*/

/*.dropdown-menu span {text-align: left; width: 100%;}*/

/* Format for selector input state-btn*/
#download-data-btn {
  margin: 17px 10px 17px 10px;
  color: #004270;
}

/* Format for selector input adm-pop-btn*/
#download-state-btn {
  margin: 17px 10px 17px 10px;
  color: #004270;
}

/* Format for selector input adm-pop-btn*/
#download-year-btn {
  margin: 17px 10px 17px 10px;
  color: #004270;
}

/*
#download-header > * > span {
  text-align: center;
}*/

/* Title of download page */
#download-title {
  text-align: left;
  font-weight: bold;
  font-size: 32px;
}

/* Title of data table selected for download */
#selected-download-title {
  text-align: left;
  font-weight: bold;
  font-size: 24px;
}

